--- a/pi/TrackPoint/nbproject/project.properties
+++ b/pi/TrackPoint/nbproject/project.properties
@@ -36,11 +36,13 @@ dist.jlink.output=${dist.jlink.dir}/TrackPoint
 endorsed.classpath=
 excludes=
 file.reference.mysql-connector-j-8.3.0.jar=C:\\Users\\lucas\\Downloads\\mysql-connector-j-8.3.0\\mysql-connector-j-8.3.0\\mysql-connector-j-8.3.0.jar
+file.reference.mysql-connector-j-8.4.0.jar=C:\\Users\\lucas\\Downloads\\pastas\\mysql-connector-j-8.4.0\\mysql-connector-j-8.4.0\\mysql-connector-j-8.4.0.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.mysql-connector-j-8.3.0.jar}:\
-    ${libs.absolutelayout.classpath}
+    ${libs.absolutelayout.classpath}:\
+    ${file.reference.mysql-connector-j-8.4.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
